// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app renders admin page 1`] = `
Array [
  <header
    className="MuiPaper-root-139 MuiPaper-elevation4-145 MuiAppBar-root-130 MuiAppBar-positionStatic-134 MuiAppBar-colorPrimary-137"
  >
    <div
      className="MuiToolbar-root-166 MuiToolbar-regular-168 MuiToolbar-gutters-167"
    >
      <a
        className="MuiButtonBase-root-176 MuiIconButton-root-170 MuiIconButton-colorInherit-171"
        href="#"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="0"
      >
        <span
          className="MuiIconButton-label-175"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-179"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-224"
        />
      </a>
      <h6
        className="MuiTypography-root-188 MuiTypography-h6-205 MuiTypography-colorInherit-217"
        style={
          Object {
            "flexGrow": 1,
          }
        }
      >
        Heroes
      </h6>
      <a
        className="MuiButtonBase-root-176 MuiIconButton-root-170 MuiIconButton-colorInherit-171"
        href="#profile"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="0"
      >
        <span
          className="MuiIconButton-label-175"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-179"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-224"
        />
      </a>
    </div>
  </header>,
  <h2>
    Heroes
  </h2>,
  <ul
    className="MuiList-root-231 MuiList-padding-232"
  >
    <div
      className="MuiButtonBase-root-176 MuiListItem-root-235 MuiListItem-default-238 MuiListItem-gutters-243 MuiListItem-button-244"
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex="0"
    >
      <div
        className="MuiListItemIcon-root-247"
      >
        <div
          className="MuiAvatar-root-248 MuiAvatar-colorDefault-249"
        />
      </div>
      <div
        className="MuiListItemText-root-251"
      >
        <span
          className="MuiTypography-root-188 MuiTypography-subheading-195 MuiListItemText-primary-254"
        >
          Johannes
        </span>
        <p
          className="MuiTypography-root-188 MuiTypography-body1-197 MuiTypography-colorTextSecondary-221 MuiListItemText-secondary-255"
        >
          johannes@brodwall.com
        </p>
      </div>
      <span
        className="MuiTouchRipple-root-224"
      />
    </div>
  </ul>,
  <a
    className="MuiButtonBase-root-176 MuiButton-root-257 MuiButton-contained-268 MuiButton-containedPrimary-269 MuiButton-raised-271 MuiButton-raisedPrimary-272"
    href="#admin/heroes/add"
    onBlur={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <span
      className="MuiButton-label-258"
    >
      Add hero
    </span>
    <span
      className="MuiTouchRipple-root-224"
    />
  </a>,
]
`;

exports[`app renders hero list 1`] = `
Array [
  <header
    className="MuiPaper-root-10 MuiPaper-elevation4-16 MuiAppBar-root-1 MuiAppBar-positionStatic-5 MuiAppBar-colorPrimary-8"
  >
    <div
      className="MuiToolbar-root-37 MuiToolbar-regular-39 MuiToolbar-gutters-38"
    >
      <a
        className="MuiButtonBase-root-47 MuiIconButton-root-41 MuiIconButton-colorInherit-42"
        href="#"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="0"
      >
        <span
          className="MuiIconButton-label-46"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-50"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-95"
        />
      </a>
      <h6
        className="MuiTypography-root-59 MuiTypography-h6-76 MuiTypography-colorInherit-88"
        style={
          Object {
            "flexGrow": 1,
          }
        }
      >
        Heroes
      </h6>
      <a
        className="MuiButtonBase-root-47 MuiIconButton-root-41 MuiIconButton-colorInherit-42"
        href="#profile"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="0"
      >
        <span
          className="MuiIconButton-label-46"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-50"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-95"
        />
      </a>
    </div>
  </header>,
  <div>
    <h1>
      
    </h1>
    <div
      className="heroes-list"
    >
      <ul
        className="MuiList-root-102 MuiList-padding-103"
      >
        <li
          className="MuiListItem-root-106 MuiListItem-default-109 MuiListItem-dense-110 MuiListItem-gutters-114"
          disabled={false}
        >
          <div
            className="MuiAvatar-root-121 MuiAvatar-colorDefault-122"
          />
          <div
            className="MuiListItemText-root-124"
          >
            <span
              className="MuiTypography-root-59 MuiTypography-subheading-66 MuiListItemText-primary-127"
            >
              Alice
            </span>
            <p
              className="MuiTypography-root-59 MuiTypography-body1-68 MuiTypography-colorTextSecondary-92 MuiListItemText-secondary-128"
            >
              
            </p>
          </div>
        </li>
        <li
          className="MuiListItem-root-106 MuiListItem-default-109 MuiListItem-dense-110 MuiListItem-gutters-114"
          disabled={false}
        >
          <div
            className="MuiAvatar-root-121 MuiAvatar-colorDefault-122"
          />
          <div
            className="MuiListItemText-root-124"
          >
            <span
              className="MuiTypography-root-59 MuiTypography-subheading-66 MuiListItemText-primary-127"
            >
              Bob
            </span>
            <p
              className="MuiTypography-root-59 MuiTypography-body1-68 MuiTypography-colorTextSecondary-92 MuiListItemText-secondary-128"
            >
              
            </p>
          </div>
        </li>
      </ul>
    </div>
  </div>,
]
`;
